test/expected/escape_two_asterisks.out
[CompoundList]
  [CompoundListCondition, None]
    [SimpleCommand "echo" "**"]
[Word
  Unquoted "echo"
]
[Word
  Unquoted "*"
  Literal "*"
]
shit: 2:6: error: No matches for the glob pattern '**'.
     2 |  echo *\*
       |       ^~~ here.
